--- a/WebApplication/requirements.txt
+++ b/WebApplication/requirements.txt
@@ -1,8 +1,78 @@
-Fabric
-Flask-SQLAlchemy
-Flask-WTF
-WTForms
-coverage
-# ecdsa
-# paramiko
-# pycrypto
+appnope==0.1.0
+attrs==19.3.0
+backcall==0.1.0
+bcrypt==3.1.7
+bleach==3.1.4
+cffi==1.13.2
+Click==7.0
+coverage==5.0.3
+cryptography==2.8
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+dlib==19.19.0
+entrypoints==0.3
+fabric==2.5.0
+Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
+importlib-metadata==1.6.0
+invoke==1.4.0
+ipykernel==5.2.1
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+itsdangerous==1.1.0
+jedi==0.17.0
+Jinja2==2.10.3
+joblib==0.14.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.6
+notebook==6.0.3
+numpy==1.18.2
+opencv-contrib-python==4.2.0.34
+opencv-python==4.2.0.34
+pandocfilters==1.4.2
+paramiko==2.7.1
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.1.1
+prometheus-client==0.7.1
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+pycparser==2.19
+Pygments==2.6.1
+PyNaCl==1.3.0
+pyparsing==2.4.7
+PyQt5==5.14.2
+PyQt5-sip==12.7.2
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pyzmq==19.0.0
+qtconsole==4.7.3
+QtPy==1.9.0
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+Send2Trash==1.5.0
+six==1.14.0
+SQLAlchemy==1.3.12
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+traitlets==4.3.3
+wcwidth==0.1.9
+webencodings==0.5.1
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
+WTForms==2.2.1
+zipp==3.1.0
